changes in html and css for check

--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
                    I also make the website more and more interactive with web animations. I can provide 
                    clean code and pixel perfect design. I also make the website more and more interactive with Web
                    animations. A responsive desgin makes your website accessible to all users, regardless of their 
-                   device.
+                   device. fasfasdfasda
                 </p>
                 <button type="button">Let's Talk</button>
             </div>
         </div>
     </section>
+
     <!--service-->
     <div class="service">
         <div class="title">
