making sample chnages

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                    I also make the website more and more interactive with web animations. I can provide 
                    clean code and pixel perfect design. I also make the website more and more interactive with Web
                    animations. A responsive desgin makes your website accessible to all users, regardless of their 
-                   device. fasfasdfasda
+                   device.
                 </p>
                 <button type="button">Let's Talk</button>
             </div>
