--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <!---nav bar-->
-    <div class ="cont">
+    <div class ="container">
         <nav>
             <h2 class ="logo">Portfo<span>lio</span></h2>
             <ul>
-                <li> <a href="#"> Home </a> </li>
-                <li> <a href="#">About Us </a> </li>
-                <li> <a href="#"> Services </a> </li>
+                <li> <a href="index.html"> Home </a> </li>
+                <li> <a href="aboutme.html">About Us </a> </li>
+                <li> <a href="service.html"> Services </a> </li>
                 <li> <a href="#"> Skills </a> </li>
                 <li> <a href="#"> Contact Us </a> </li>
             </ul> 
